bwt threading and wallet rescanning